--- a/verl/trainer/config/ppo_trainer.yaml
+++ b/verl/trainer/config/ppo_trainer.yaml
@@ -67,6 +67,7 @@ actor_rollout_ref:
   rollout:
     name: vllm
     temperature: 1.0
+    # stop: ['</query>']
     top_k: -1 # 0 for hf rollout, -1 for vllm rollout
     top_p: 0.95
     prompt_length: ${data.max_prompt_length}  # not use for opensource
@@ -156,8 +157,8 @@ algorithm:
     type: fixed
     kl_coef: 0.001
   state_masking:
-    start_state_marker: "<information>"
-    end_state_marker: "</information>"
+    start_state_marker: "<response>"
+    end_state_marker: "</response>"
 
 trainer:
   total_epochs: 30
